; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_mtime.c_timespec_from_vlc_tick.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_mtime.c_timespec_from_vlc_tick.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { i32, i32 }
%struct.TYPE_3__ = type { i32, i32 }

@CLOCK_FREQ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @timespec_from_vlc_tick(i32 %0) #0 {
  %2 = alloca %struct.timespec, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @CLOCK_FREQ, align 4
  %7 = call i64 @lldiv(i32 %5, i32 %6)
  %8 = bitcast %struct.TYPE_3__* %4 to i64*
  store i64 %7, i64* %8, align 4
  %9 = getelementptr inbounds %struct.timespec, %struct.timespec* %2, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %9, align 4
  %12 = getelementptr inbounds %struct.timespec, %struct.timespec* %2, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @NS_FROM_VLC_TICK(i32 %14)
  store i32 %15, i32* %12, align 4
  %16 = bitcast %struct.timespec* %2 to i64*
  %17 = load i64, i64* %16, align 4
  ret i64 %17
}

declare dso_local i64 @lldiv(i32, i32) #1

declare dso_local i32 @NS_FROM_VLC_TICK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
